@@ -1,4 +1,4 @@
 version=3.5.0
 version.suffix=M2
-version.product=3.5.0
+version.product=3.5.0-M1
 
