@@ -1,7 +1,7 @@
 #Wed Jul 17 14:57:27 CEST 2013
-instance=test
-password=test
+instance=
+password=
 name=MongoDB
 type=MONGODB
-host=virt-foxtrot
-username=test
+host=
+username=
